--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@glimmer/core": "2.0.0-beta.11",
     "@glimmer/helper": "2.0.0-beta.11",
     "@glimmer/modifier": "2.0.0-beta.11",
-    "@glimmer/tracking": "2.0.0-beta.11"
+    "@glimmer/tracking": "2.0.0-beta.11",
+    "navigo": "^7.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
