--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@glimmer/helper": "2.0.0-beta.11",
     "@glimmer/modifier": "2.0.0-beta.11",
     "@glimmer/tracking": "2.0.0-beta.11",
-    "navigo": "^8.0.1",
-    "page": "^1.11.6"
+    "navigo": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
